--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-hbs": "^2.4.0",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "method-override": "^3.0.0",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.3",
+    "path": "^0.12.7",
     "qrcode": "^1.5.0",
     "supervisor": "^0.12.0"
   }
