--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
+    "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "express-hbs": "^2.4.0",
     "express-session": "^1.17.3",
@@ -19,6 +20,10 @@
     "method-override": "^3.0.0",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
+    "password-validator": "^5.3.0",
     "path": "^0.12.7",
     "qrcode": "^1.5.0",
     "supervisor": "^0.12.0"
